--- a/package.json
+++ b/package.json
@@ -10,39 +10,21 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "busboy": "^0.2.14",
-    "co": "^4.6.0",
-    "debug": "^2.6.0",
     "echarts": "^4.0.4",
-    "ejs": "^2.5.5",
     "element-react": "^1.4.10",
     "element-theme-default": "^1.4.13",
     "glob": "^5.0.15",
     "iconv-lite": "^0.4.19",
-    "koa": "^2.0.0",
-    "koa-bodyparser": "^3.2.0",
-    "koa-convert": "^1.2.0",
-    "koa-ejs": "4.1.0",
-    "koa-log4": "^2.3.0",
-    "koa-logger": "^1.3.0",
-    "koa-mysql-session": "0.0.2",
-    "koa-router": "^7.0.1",
-    "koa-send": "^3.2.0",
-    "koa-session-minimal": "^3.0.3",
-    "koa-static": "^2.0.0",
-    "koa-views": "^5.2.0",
     "lodash": "^4.17.4",
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
-    "mysql": "^2.12.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
-    "ua-parser-js": "^0.7.17",
-    "validator": "^6.2.0"
+    "ua-parser-js": "^0.7.17"
   },
   "devDependencies": {
     "autoprefixer": "7.1.6",
